# Telegramster

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gradle.properties
TMessagesProj/: CMakeLists.txt  build.gradle
TMessagesProj/config/debug/: AndroidManifest.xml  AndroidManifest_SDK23.xml
TMessagesProj/config/foss/: AndroidManifest.xml
TMessagesProj/config/release/: AndroidManifest_SDK23.xml
TMessagesProj/jni/: Android.mk  Log.hpp  SqliteWrapper.cpp  audio.c  image.c  image.h  jni.c  jni.cpp  main.cpp  native-lib.cpp  native-lib.hpp  native.cpp  native.h  secureid_ocr.cpp  utilities.cpp
TMessagesProj/jni/emoji/: emoji_suggestions.cpp
TMessagesProj/jni/tgnet/: ApiScheme.h
TMessagesProj/src/main/: AndroidManifest.xml
TMessagesProj/src/main/java/org/telegramster/PhoneFormat/: PhoneFormat.java  RuleSet.java
TMessagesProj/src/main/java/org/telegramster/SQLite/: SQLiteException.java  SQLitePreparedStatement.java
TMessagesProj/src/main/java/org/telegramster/messenger/: AndroidUtilities.java  AppStartReceiver.java  ApplicationLoader.java  AuthenticatorService.java  BringAppForegroundService.java  BuildVars.java  CallReceiver.java  DataQuery.java  DispatchQueue.java  DownloadController.java  Emoji.java  EmojiSuggestion.java  FileLog.java  GcmPushListenerService.java  KeepAliveJob.java  LocaleController.java  LocationController.java  LocationSharingService.java  MessageObject.java  MessagesController.java  MusicPlayerReceiver.java  MusicPlayerService.java  NativeLoader.java  NotificationBadge.java  NotificationCenter.java  NotificationDismissReceiver.java  NotificationsController.java  OpenChatReceiver.java  RefererReceiver.java  ScreenReceiver.java  ShareBroadcastReceiver.java  StatsController.java  StopLiveLocationReceiver.java  TgChooserTargetService.java  UserObject.java  VideoEditedInfo.java  WearDataLayerListenerService.java  WebFile.java  XiaomiUtilities.java
TMessagesProj/src/main/java/org/telegramster/messenger/camera/: CameraInfo.java  CameraSession.java  Size.java
TMessagesProj/src/main/java/org/telegramster/messenger/secretmedia/: ExtendedDefaultDataSource.java
TMessagesProj/src/main/java/org/telegramster/messenger/support/: ArrayUtils.java  SparseLongArray.java
TMessagesProj/src/main/java/org/telegramster/messenger/time/: DateParser.java  FastDateFormat.java  FastDateParser.java
TMessagesProj/src/main/java/org/telegramster/messenger/video/: InputSurface.java  MP4Builder.java  Mp4Movie.java  OutputSurface.java  Sample.java  Track.java
TMessagesProj/src/main/java/org/telegramster/messenger/voip/: TelegramConnectionService.java  VoIPBaseService.java  VoIPController.java  VoIPServerConfig.java  VoIPService.java
TMessagesProj/src/main/java/org/telegramster/tgnet/: AbstractSerializedData.java  ConnectionsManager.java  FileLoadOperation.java  NativeByteBuffer.java  RequestDelegate.java  TLClassStore.java  TLObject.java  WriteToSocketDelegate.java
TMessagesProj/src/main/java/org/telegramster/ui/: CancelAccountDeletionActivity.java  ChangeBioActivity.java  ChangePhoneHelpActivity.java  ChannelCreateActivity.java  ChannelIntroActivity.java  ChatActivity.java  ChatEditTypeActivity.java  CommonGroupsActivity.java  CountrySelectActivity.java  DataAutoDownloadActivity.java  DataUsageActivity.java  DialogsActivity.java  DocumentSelectActivity.java  FeaturedStickersActivity.java  GroupCreateFinalActivity.java  GroupStickersActivity.java  LoginActivity.java  LogoutActivity.java  MrzCameraActivity.java  NotificationsCustomSettingsActivity.java  NotificationsSettingsActivity.java  PassportActivity.java  PaymentFormActivity.java  PhonebookSelectActivity.java  PhotoAlbumPickerActivity.java  PhotoCropActivity.java  PhotoPickerActivity.java  PollCreateActivity.java  PopupNotificationActivity.java  PrivacyControlActivity.java  PrivacyUsersActivity.java  ProfileActivity.java  ProfileNotificationsActivity.java  QuickRepliesSettingsActivity.java  SFMLActivity.java  SessionsActivity.java  ShareActivity.java  StickerPreviewViewer.java  VoIPFeedbackActivity.java  VoIPPermissionActivity.java  (+2 more)
TMessagesProj/src/main/java/org/telegramster/ui/ActionBar/: ActionBar.java  ActionBarMenuItem.java  BackDrawable.java  BaseFragment.java  BottomSheet.java  DarkAlertDialog.java  MenuDrawable.java  SimpleTextView.java  ThemeDescription.java
TMessagesProj/src/main/java/org/telegramster/ui/Adapters/: BaseLocationAdapter.java  DialogsAdapter.java  DialogsSearchAdapter.java  DrawerLayoutAdapter.java  LocationActivityAdapter.java  PhonebookSearchAdapter.java  SearchAdapterHelper.java  StickersAdapter.java
TMessagesProj/src/main/java/org/telegramster/ui/Cells/: AudioCell.java  AudioPlayerCell.java  ChatActionCell.java  CheckBoxUserCell.java  DialogCell.java  DialogsEmptyCell.java  DividerCell.java  EditTextSettingsCell.java  FeaturedStickerSetCell.java  FeaturedStickerSetInfoCell.java  GroupCreateSectionCell.java  HashtagSearchCell.java  HeaderCell.java  LetterSectionCell.java  LoadingCell.java  LocationPoweredCell.java  ManageChatTextCell.java  ManageChatUserCell.java  MaxFileSizeCell.java  MentionCell.java  PhotoEditRadioCell.java  PhotoPickerPhotoCell.java  SendLocationCell.java  SessionCell.java  ShareDialogCell.java  SharedAudioCell.java  SharedMediaSectionCell.java  SharingLiveLocationCell.java  StickerEmojiCell.java  StickerSetCell.java  StickerSetNameCell.java  TextBlockCell.java  TextCheckCell.java  TextColorThemeCell.java  TextDetailCell.java  TextInfoCell.java  TextPriceCell.java  TextSettingsCell.java  ThemeTypeCell.java  UserCell.java
TMessagesProj/src/main/java/org/telegramster/ui/Components/: AlertsCreator.java  AnchorSpan.java  AnimatedFileDrawable.java  AudioPlayerAlert.java  AvatarDrawable.java  BetterRatingView.java  BlockingUpdateView.java  BotKeyboardView.java  ChatAvatarContainer.java  ChatBigEmptyView.java  CheckBox.java  (+57 more)
TMessagesProj/src/main/res/xml/: auth.xml  sync_contacts.xml
TMessagesProj/src/multidex/java/org/telegramster/messenger/: MultiDexApplicationLoader.java
Trunk/src/: CMakeLists.txt  Log.cpp  MainState.cpp  main.cpp  native-lib.cpp
(+417 files in other folders)
